Added BCP client and addPlayers request updated